--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,203 @@
-# 기본 의존성
-python-dotenv>=1.0.0
-requests>=2.31.0
-pydantic>=2.0.0
-tqdm>=4.66.0
-
-# 문서 처리 라이브러리
-striprtf>=0.0.22
-python-docx>=1.0.0
-PyMuPDF>=1.22.5
-PyPDF2>=3.0.0
-
-# 임베딩 및 벡터 저장소
-sentence-transformers>=2.2.2
-chromadb>=0.4.18
-openai>=1.1.0
-
-# LangChain 관련
-langchain>=0.0.330
-langchain-community>=0.0.10
-langchain-core>=0.1.6
-
-# NLP 도구
-nltk>=3.8.1
-mecab-python3>=1.0.6   # 한국어 형태소 분석 (선택 사항)
-konlpy>=0.6.0          # 한국어 자연어 처리 (선택 사항)
+# Updated requirements.txt
+# Generated via: pip freeze > requirements.txt
+# Date: 2025-05-08
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
+altair==5.5.0
+annotated-types==0.7.0
+anyio==4.9.0
+asgiref==3.8.1
+attrs==25.3.0
+backoff==2.2.1
+bcrypt==4.3.0
+beautifulsoup4==4.13.4
+black==25.1.0
+blinker==1.9.0
+build==1.2.2.post1
+cachetools==5.5.2
+certifi==2025.1.31
+charset-normalizer==3.4.1
+chroma-hnswlib==0.7.6
+chromadb==0.6.3
+click==8.1.8
+coloredlogs==15.0.1
+contourpy==1.3.2
+coverage==7.8.0
+cycler==0.12.1
+dataclasses-json==0.6.7
+datasets==3.5.0
+defusedxml==0.7.1
+Deprecated==1.2.18
+dill==0.3.8
+distro==1.9.0
+durationpy==0.9
+fastapi==0.115.9
+filelock==3.18.0
+Flask==3.1.0
+flatbuffers==25.2.10
+fonttools==4.57.0
+frozenlist==1.6.0
+fsspec==2024.12.0
+gdown==5.2.0
+gitdb==4.0.12
+GitPython==3.1.44
+google-api-core==2.24.2
+google-api-python-client==2.167.0
+google-auth==2.39.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
+googleapis-common-protos==1.70.0
+grpcio==1.71.0
+h11==0.14.0
+httpcore==1.0.8
+httplib2==0.22.0
+httptools==0.6.4
+httpx==0.28.1
+httpx-sse==0.4.0
+huggingface-hub==0.30.2
+humanfriendly==10.0
+idna==3.10
+importlib_metadata==8.6.1
+importlib_resources==6.5.2
+iniconfig==2.1.0
+isort==6.0.1
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jiter==0.9.0
+joblib==1.4.2
+jpype1==1.5.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
+kiwisolver==1.4.8
+konlpy==0.6.0
+kubernetes==32.0.1
+langchain==0.3.24
+langchain-chroma==0.2.3
+langchain-community==0.3.22
+langchain-core==0.3.55
+langchain-openai==0.3.14
+langchain-text-splitters==0.3.8
+langsmith==0.3.33
+llvmlite==0.44.0
+lxml==5.4.0
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+matplotlib==3.10.1
+mdurl==0.1.2
+mecab-python3==1.0.10
+mmh3==5.1.0
+monotonic==1.6
+more-itertools==10.6.0
+mpmath==1.3.0
+multidict==6.4.3
+multiprocess==0.70.16
+mypy_extensions==1.1.0
+narwhals==1.36.0
+networkx==3.4.2
+nltk==3.9.1
+numba==0.61.2
+numpy==2.2.5
+oauthlib==3.2.2
+onnxruntime==1.21.1
+openai==1.76.0
+openai-whisper==20240930
+opentelemetry-api==1.32.1
+opentelemetry-exporter-otlp-proto-common==1.32.1
+opentelemetry-exporter-otlp-proto-grpc==1.32.1
+opentelemetry-instrumentation==0.53b1
+opentelemetry-instrumentation-asgi==0.53b1
+opentelemetry-instrumentation-fastapi==0.53b1
+opentelemetry-proto==1.32.1
+opentelemetry-sdk==1.32.1
+opentelemetry-semantic-conventions==0.53b1
+opentelemetry-util-http==0.53b1
+orjson==3.10.16
+overrides==7.7.0
+packaging==24.2
+pandas==2.2.3
+pathspec==0.12.1
+pillow==11.2.1
+platformdirs==4.3.7
+pluggy==1.5.0
+posthog==3.25.0
+propcache==0.3.1
+proto-plus==1.26.1
+protobuf==5.29.4
+pyarrow==19.0.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pydantic==2.11.3
+pydantic-settings==2.9.1
+pydantic_core==2.33.1
+pydeck==0.9.1
+Pygments==2.19.1
+PyMuPDF==1.25.3
+pyparsing==3.2.3
+PyPDF2==3.0.1
+PyPika==0.48.9
+pyproject_hooks==1.2.0
+PySocks==1.7.1
+pytest==8.3.5
+pytest-cov==6.1.1
+python-dateutil==2.9.0.post0
+python-docx==1.1.2
+python-dotenv==1.1.0
+pytz==2025.2
+PyYAML==6.0.2
+rank-bm25==0.2.2
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.3
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rich==14.0.0
+rpds-py==0.24.0
+rsa==4.9.1
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.2
+sentence-transformers==4.1.0
+setuptools==79.0.0
+shellingham==1.5.4
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+soupsieve==2.7
+SQLAlchemy==2.0.40
+starlette==0.45.3
+streamlit==1.44.1
+striprtf==0.0.29
+sympy==1.13.1
+tenacity==9.1.2
+threadpoolctl==3.6.0
+tiktoken==0.9.0
+tokenizers==0.21.1
+toml==0.10.2
+torch==2.6.0
+tornado==6.4.2
+tqdm==4.67.1
+transformers==4.51.3
+typer==0.15.2
+typing-inspect==0.9.0
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+tzdata==2025.2
+uritemplate==4.1.1
+urllib3==2.4.0
+uvicorn==0.34.2
+uvloop==0.21.0
+watchfiles==1.0.5
+websocket-client==1.8.0
+websockets==15.0.1
+Werkzeug==3.1.3
+wrapt==1.17.2
+xxhash==3.5.0
+yarl==1.20.0
+youtube-transcript-api==1.0.3
+yt-dlp==2025.3.31
+zipp==3.21.0
+zstandard==0.23.0
