--- a/.github/workflows/qa_pipeline.yml
+++ b/.github/workflows/qa_pipeline.yml
@@ -16,7 +16,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    env:
+     OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
     steps:
       - name: 체크아웃 코드
         uses: actions/checkout@v3
